@@ -5,4 +5,3 @@
   - Complex numbers (as pairs of two numbers of same type)
 * Promises
 * Streams
-* Escape continuations
