@@ -1,3 +1,8 @@
+2005-12-18  Ales Hakl  <ales at hakl dot net>
+
+	* src/native.c (native_call_ec): Escape continuations
+	(native_raise, native_error, native_abort ...): Exception wrappers 
+
 2005-12-17  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c: Removed checks for exception datatype
